--- a/produtos.html
+++ b/produtos.html
@@ -28,19 +28,19 @@
     <main>
         <ul class="produtos">
             <li>
-                <h2>Cabelo</h2>
+                <h2 class="tipo">Cabelo</h2>
                 <img src="img-produto/cabelo.jpg">
                 <p class="produto-descricao">Na tesooura ou na máquina, como o  cliente preferir</p>
                 <p class="preco">R$ 25,00</p>
             </li>
             <li>
-                <h2>Barba</h2>
+                <h2 class="tipo">Barba</h2>
                 <img src="img-produto/barba.jpg">
                 <p class="produto-descricao">Corte e desenho profissional de barba</p>
                 <p class="preco">R$ 20,00</p>
             </li>
             <li>
-                <h2>Cabelo e barba</h2>
+                <h2 class="tipo">Cabelo e barba</h2>
                 <img src="img-produto/cabelo+barba.jpg">
                 <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                 <p class="preco">R$ 40,00</p>
